--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   font-family: sans-serif;
   font-size: 50px;
   font-weight: bald;
-  background-color: skyblue;
+  background-color: White;
   text-align: Center;
 }
 
