--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body{
+  background-color: Black;
+  font-color: White;
+}
+
 .home_bar {
   color: #ff4500;
   font-family: sans-serif;
@@ -15,7 +20,7 @@
   font-color: blue;
 }
 
-h2 {
+h2{
   font-size: 25px;
   font-family: sans-serif;
 }
