--- a/index.css
+++ b/index.css
@@ -1,18 +1,9 @@
-.home_bar {
-  color: White;
-  font-family: sans-serif;
-  font-size: 50px;
-  font-weight: bald;
-  background-color: Black;
-  text-align: Center;
-}
-
 .under_url {
-  font-color: White;
+  color: White;
 }
 
 .home_url {
-  font-color: blue;
+  color: blue;
 }
 
 h2{
@@ -22,7 +13,7 @@ h2{
 
 .under_bar {
   background-color: black;
-  font-color: #ffffff;
+  color: #ffffff;
   font-size: 10px;
   text-align: left;
   font-family: sans-serif;
