--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ h2{
 
 .under_bar {
   background-color: black;
-  color: #ffffff;
+  color: white;
   font-size: 10px;
   text-align: left;
   font-family: sans-serif;
