--- a/index.css
+++ b/index.css
@@ -3,11 +3,13 @@ h1{
   font-family: sans-serif;
   background-color: black;
   text-align: center;
+  font-weight: bold;
 }
 
 h2{
   font-size: 25px;
   font-family: sans-serif;
+  font-weight: bold;
 }
 
 .under_url {
