--- a/index.css
+++ b/index.css
@@ -1,9 +1,5 @@
-body{
-  background-color: black;
-}
-
 .top_title{
-  color: white
+  color: white;
   background-color: black;
   font-size: 40px;
   font-family: sans-serif;
