--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body{
   text-align: center;
   font-weight: bold;
   margin: 0;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
   height: 50px;
   vertical-align: middle;
